# jsonb_delta

./: .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.security  README.md  SECURITY.md  TESTING.md  changelog.md  contributing.md  development.md  jsonb_delta.control  justfile  test_output_02_array_update_where.sql.txt  test_output_03_merge_at_path.sql.txt  test_output_06_deep_merge.sql.txt  trivy-results.json
.archive/: ci-cd-improvement-plan.md
.github/: markdown-link-check-config.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: fuzzing.yml  (+9 more)
.phases/: README.md  phase-01-array-size-bounds.md  phase-02-nested-path-tests.md  phase-03-input-validation.md  phase-04-binary-search-insertion.md  phase-05-error-path-coverage.md  phase-06-finalize.md
baselines/: baseline-clippy.txt  baseline-coverage.json  baseline-perf.txt  baseline-tech-debt.txt  baseline-threats.md
config/: .markdownlint-cli2.yaml  markdown-link-check-config.json
docs/: API.md  ARCHITECTURE.md  COMPATIBILITY.md  PERFORMANCE.md  SECURITY-SUPPRESSIONS.md  api-reference.md  development.md  integration-guide.md  quick-start.md  troubleshooting.md
fuzz/: Cargo.toml
scripts/: run_load_tests.sh  run_property_tests.sh  run_tests.sh  validate_docs.sh
sql/: jsonb_delta--0.1.0.sql  jsonb_ivm--0.1.0.sql
src/: array_ops.rs  depth.rs  lib.rs  merge.rs  path.rs  property_tests.rs  search.rs
test/: test_output_01_merge_shallow.sql.txt  test_output_04_smart_patch.sql.txt  test_output_05_array_crud.sql.txt
(+28 files in other folders)
