[package]
name = "jsonb_delta"
version = "0.1.0"
edition = "2021"
authors = ["Lionel Hamayon <lionel.hamayon@evolution-digitale.fr>"]
license = "PostgreSQL"
description = "Efficient JSONB delta and patch operations for PostgreSQL"
homepage = "https://github.com/fraiseql/jsonb_delta"
repository = "https://github.com/fraiseql/jsonb_delta"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_jsonb_delta"
path = "./src/bin/pgrx_embed.rs"

[dependencies]
pgrx = "=0.16.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["pg18"]
pg13 = ["pgrx/pg13"]
pg14 = ["pgrx/pg14"]
pg15 = ["pgrx/pg15"]
pg16 = ["pgrx/pg16"]
pg17 = ["pgrx/pg17"]
pg18 = ["pgrx/pg18"]
pg_test = []

[dev-dependencies]
pgrx-tests = "0.16.1"
quickcheck = "1.0"
quickcheck_macros = "1.0"
arbitrary = "1.3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
